--- a/client/package.json
+++ b/client/package.json
@@ -10,49 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.0.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
-    "@taiga-ui/addon-charts": "^3.66.0",
-    "@taiga-ui/addon-commerce": "^3.66.0",
-    "@taiga-ui/addon-doc": "^3.66.0",
-    "@taiga-ui/addon-mobile": "^3.66.0",
-    "@taiga-ui/addon-preview": "^3.66.0",
-    "@taiga-ui/addon-table": "^3.66.0",
-    "@taiga-ui/addon-tablebars": "^3.66.0",
-    "@taiga-ui/cdk": "^3.66.0",
-    "@taiga-ui/core": "^3.66.0",
-    "@taiga-ui/icons": "^3.66.0",
-    "@taiga-ui/kit": "^3.66.0",
-    "@taiga-ui/layout": "^3.66.0",
-    "@taiga-ui/styles": "^3.66.0",
-    "@tinkoff/ng-dompurify": "4.0.0",
-    "dompurify": "3.0.6",
+    "@angular/animations": "^17.2.0",
+    "@angular/common": "^17.2.0",
+    "@angular/compiler": "^17.2.0",
+    "@angular/core": "^17.2.0",
+    "@angular/forms": "^17.2.0",
+    "@angular/platform-browser": "^17.2.0",
+    "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/router": "^17.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.1",
-    "@angular/cli": "~15.2.1",
-    "@angular/compiler-cli": "^15.2.0",
-    "@types/dompurify": "3.0.5",
-    "@types/jasmine": "~4.3.0",
-    "autoprefixer": "^10.4.17",
-    "jasmine-core": "~4.5.0",
+    "@angular-devkit/build-angular": "^17.2.3",
+    "@angular/cli": "^17.2.3",
+    "@angular/compiler-cli": "^17.2.0",
+    "@types/jasmine": "~5.1.0",
+    "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~4.9.4"
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.3.2"
   }
 }
