--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,16 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@taiga-ui/addon-preview": "^3.69.0",
+    "@taiga-ui/addon-tablebars": "^3.69.0",
+    "@taiga-ui/cdk": "^3.69.0",
+    "@taiga-ui/core": "^3.69.0",
+    "@taiga-ui/icons": "^3.69.0",
+    "@taiga-ui/kit": "^3.69.0",
+    "@taiga-ui/layout": "^3.69.0",
+    "@taiga-ui/styles": "^3.69.0",
+    "@tinkoff/ng-dompurify": "4.0.0",
+    "dompurify": "3.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -26,6 +36,7 @@
     "@angular-devkit/build-angular": "^17.2.3",
     "@angular/cli": "^17.2.3",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/dompurify": "3.0.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
