--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@tinkoff/ng-dompurify": "4.0.0",
     "@tinkoff/ng-polymorpheus": "^4.3.0",
     "dompurify": "3.0.6",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -48,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "^10.4.18",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
