--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,26 +2,30 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": false,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "declaration": false,
-    "experimentalDecorators": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
-    "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"]
-  },
+  "rootDir": ".",
+  "baseUrl": ".",
+  "target": "ES2022",
+  "module": "ESNext",
+  "moduleResolution": "node",
+  "esModuleInterop": true,
+  "noImplicitReturns": true,
+  "noImplicitOverride": false,
+  "noFallthroughCasesInSwitch": true,
+  "noPropertyAccessFromIndexSignature": false,
+  "sourceMap": true,
+  "skipLibCheck": true,
+  "skipDefaultLibCheck": true,
+  "forceConsistentCasingInFileNames": true,
+  "declaration": false,
+  "downlevelIteration": true,
+  "importHelpers": true,
+  "emitDecoratorMetadata": true,
+  "experimentalDecorators": true,
+  "allowSyntheticDefaultImports": true,
+  "useDefineForClassFields": false,
+  "typeRoots": ["node_modules/@types"],
+  "lib": ["ES2022", "dom", "dom.iterable"],
+},
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
