--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@taiga-ui/addon-charts": "^4.2.0",
     "@taiga-ui/addon-preview": "^3.69.0",
     "@taiga-ui/addon-tablebars": "^3.69.0",
     "@taiga-ui/cdk": "^3.69.0",
@@ -29,6 +30,7 @@
     "@taiga-ui/styles": "^3.69.0",
     "@tinkoff/ng-dompurify": "4.0.0",
     "@tinkoff/ng-polymorpheus": "^4.3.0",
+    "crypto-js": "^4.2.0",
     "dompurify": "3.0.6",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
